# whiskey

./: .clang-format  .gitignore  CMakeLists.txt  TODO.md
include/whiskey/: AST.hpp  AST2.hpp  CodeGen.hpp  Core.hpp  Fuzzing.hpp  Lexing.hpp  Messages.hpp  Parsing.hpp  Passes.hpp  Printing.hpp  Source.hpp  Whiskey.hpp
include/whiskey-testing/: IntegrationTest.hpp  IntegrationTestLoader.hpp  IntegrationTestSet.hpp  IntegrationTestSuite.hpp  PathUtils.hpp
include/whiskey/AST/: AST.hpp  AST.tpp  Decl.hpp  DeclClass.hpp  DeclFunction.hpp  DeclNamespace.hpp  DeclVariable.hpp  Expr.hpp  ExprBinary.hpp  ExprCall.hpp  ExprLiteral.hpp  ExprLiteral.tpp  ExprLiteralFloat.hpp  ExprLiteralInt.hpp  ExprSymbol.hpp  ExprUnary.hpp  Field.hpp  Field.tpp  FieldInt.hpp  FieldNode.hpp  FieldNodeVector.hpp  FieldReal.hpp  FieldScope.hpp  FieldString.hpp  FieldTag.hpp  FieldUInt.hpp  Import.hpp  Module.inc  Node.hpp  NodeType.hpp  Pass.hpp  PassContext.hpp  PassGroup.hpp  PassManager.hpp  PassResult.hpp  Predicates.hpp  Requires.hpp  Scope.hpp  Stmt.hpp  StmtBlock.hpp  (+14 more)
include/whiskey/AST2/: Field.hpp  Module.inc  Node.hpp
include/whiskey/CodeGen/: Generator.hpp  JIT.hpp  JIT.tpp  LLVMGenerator.hpp  LLVMJIT.hpp  Module.inc
include/whiskey/Core/: Assert.hpp  Assert.tpp  Backtrace.hpp  CRef.hpp  CRef.tpp  Char.hpp  Char.tpp  Cloneable.hpp  Cloneable.tpp  Color.hpp  Container.hpp  Container.tpp  ContainerRef.hpp  ContainerRef.tpp  Endianness.hpp  Endianness.tpp  External.inc  LiteralPrinter.hpp  LiteralPrinterBool.hpp  LiteralPrinterChar.hpp  LiteralPrinterInt.hpp  LiteralPrinterInt.tpp  LiteralPrinterReal.hpp  LiteralPrinterString.hpp  LiteralPrinterUInt.hpp  Literals.hpp  Module.inc  PrintLiterals.hpp  Ref.hpp  Ref.tpp  String.hpp  String.tpp  StringContainer.hpp  StringRef.hpp  Types.hpp  Types.tpp  Verbose.hpp
include/whiskey/Fuzzing/: Module.inc  TokenFuzzer.hpp  TokenFuzzerSimple.hpp
include/whiskey/Lexing/: Lexer.hpp  LexerContext.hpp  Module.inc  UnLexUtils.hpp
include/whiskey/Messages/: Message.hpp  MessageBuffer.hpp  MessageContext.hpp  Module.inc
include/whiskey/Parsing/: EvalLiterals.hpp  Module.inc  Parser.hpp  ParserContext.hpp  ParserGrammar.hpp  ParserResult.hpp  ParserRule.hpp  ParserRule.tpp  ParserRuleAny.hpp  ParserRuleConcat.hpp  ParserRuleEmpty.hpp  ParserRuleTerm.hpp
include/whiskey/Passes/: Module.inc  Pass.hpp  PassContext.hpp  PassContext.tpp  PassManager.hpp  Verification.hpp
include/whiskey/Printing/: DebugPrinter.hpp  DebugPrinter.tpp  Module.inc  Precedence.hpp  Printer.hpp
include/whiskey/Source/: Location.hpp  Module.inc  Range.hpp  Source.hpp  Token.hpp  TokenID.hpp
include/whiskey/Unicode/: ByteCharInStream.hpp  ByteCharOutStream.hpp  ByteInStream.hpp  ByteOutStream.hpp  Char.hpp  Char.tpp  CharInStream.hpp  CharOutStream.hpp  Encoding.hpp  Endianness.hpp  FileByteInStream.hpp  FileByteOutStream.hpp  IStreamByteInStream.hpp  OStreamByteOutStream.hpp  OStreamCharOutStream.hpp  String.hpp  StringByteInStream.hpp  StringByteOutStream.hpp  StringCharInStream.hpp  StringCharOutStream.hpp  StringContainer.hpp  StringContainer.tpp  StringRef.hpp
lib/whiskey-testing/: IntegrationTest.cpp  IntegrationTestLoader.cpp  IntegrationTestSet.cpp  IntegrationTestSuite.cpp  PathUtils.cpp
lib/whiskey/AST/: AST.cpp  Decl.cpp  DeclClass.cpp  DeclFunction.cpp  DeclNamespace.cpp  DeclVariable.cpp  Expr.cpp  ExprBinary.cpp  ExprCall.cpp  ExprLiteralFloat.cpp  ExprLiteralInt.cpp  ExprSymbol.cpp  ExprUnary.cpp  Field.cpp  FieldInt.cpp  FieldNode.cpp  FieldNodeVector.cpp  FieldReal.cpp  FieldScope.cpp  FieldString.cpp  FieldTag.cpp  FieldUInt.cpp  Import.cpp  Module.inc  Node.cpp  NodeType.cpp  Pass.cpp  PassGroup.cpp  PassManager.cpp  Predicates.cpp  Requires.cpp  Scope.cpp  Stmt.cpp  StmtBlock.cpp  StmtEmpty.cpp  StmtExpr.cpp  StmtFor.cpp  StmtForEach.cpp  StmtIf.cpp  StmtWhile.cpp  (+6 more)
lib/whiskey/AST2/: Field.cpp  Module.inc  Node.cpp
lib/whiskey/CodeGen/: Generator.cpp  JIT.cpp  LLVMGenerator.cpp  LLVMJIT.cpp  LLVMJIT.hpp  Module.inc
lib/whiskey/Core/: Assert.cpp  Backtrace.cpp  Char.cpp  Color.cpp  Endianness.cpp  External.inc  LiteralPrinter.cpp  LiteralPrinterBool.cpp  LiteralPrinterChar.cpp  LiteralPrinterInt.cpp  LiteralPrinterReal.cpp  LiteralPrinterString.cpp  LiteralPrinterUInt.cpp  Literals.cpp  Module.inc  (+6 more)
proto/: ast.py  base_lexer.py  base_parser.py  base_verifier.py  cli.py  header_verifier.py  literal_print.py  test.w  token.py  whiskey.py  whiskey_lexer.py  whiskey_parser.py
scripts/: format.py  line_count.py  utils.py
spec/: WhiskeyLanguage.tex
test/demo/: DemoDebugPrinter.cpp
test/feature/: Feature_Unicode.cpp
test/fuzz/: FuzzLexerFuzzerSimple.cpp  FuzzLexerRandom.cpp  FuzzLiteralsReflexiveChar.cpp  FuzzLiteralsReflexiveReal.cpp  FuzzLiteralsReflexiveString.cpp  FuzzLiteralsReflexiveUInt.cpp  FuzzLiteralsReflexiveUInt64.cpp
test/integration/: Integration.hpp  Integration_AST.cpp  Integration_AST2.cpp  Integration_AST2_NodeFields.cpp  Integration_CodeGen_JIT.cpp  Integration_CodeGen_ObjectFile.cpp  Integration_Fuckit.cpp  Integration_Lexing_Lexer.cpp  Integration_Parsing_Parser.cpp  Integration_Passes.cpp  Main.cpp  Simple.cpp
test/unit/: Test_AST_CloneCompare.cpp  Test_Core_Assert.cpp  Test_Core_Cloneable.cpp  Test_Core_Color.cpp  Test_Core_Container.cpp  Test_Core_PrintLiterals.cpp  Test_Feature_Unicode.cpp  Test_Lexing_Lexer.cpp  Test_Lexing_LexerContext.cpp  Test_Parsing_EvalLiterals.cpp  Test_Parsing_Parser.cpp  Test_Parsing_ParserContext.cpp  Test_Parsing_ParserResult.cpp  Test_Source_Range.cpp  Test_Source_SourceAndLocation.cpp  Unit_AST2_Field.cpp  Unit_AST2_Node.cpp  Unit_Core_Assert.cpp  Unit_Core_Color.cpp  Unit_Core_PrintLiterals.cpp  Unit_Core_StringContainer.cpp  Unit_Core_StringContainer_AsRef.cpp  Unit_Core_StringRef.cpp  Unit_Lexing_LexerContext.cpp  Unit_Parsing_EvalLiterals.cpp  Unit_Parsing_ParserContext.cpp  Unit_Parsing_ParserResult.cpp  Unit_Passes_Pass.cpp  Unit_Passes_PassManager.cpp  Unit_Source_Range.cpp  Unit_Source_SourceAndLocation.cpp
web/source/: doctext.wdt  index.wdt  rationale.wdt  tutorial.wdt
(+120 files in other folders)
